--- a/geothermalsite/dashboard/templates/dashboard/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/about.html
@@ -163,7 +163,7 @@
         </p>
         <h4 id="list-about-data">About the Data Pipeline</h4>
         <p>
-            The database is maintained by Bruce Duffy, Technical Assistant of the Physics department. <strong>For the current data collection configuration, measurements from each of the 5 boreholes are collected in every 30 minutes. </strong>
+            The database is maintained by Bruce Duffy, Technical Assistant of the <a class="link" href="https://www.carleton.edu/physics-astronomy/" target="_blank"><u>Physics department</u></a>. <strong>For the current data collection configuration, measurements from each of the 5 boreholes are collected in every 30 minutes. </strong>
             The overview of the data pipeline for the geothermal system is as follows: the 5 fiber optic cables embedded in the Bald Spot boreholes converge at a switchbox in a utility tunnel north of the Chapel, which is connected to a Silixa XT-DTS unit in a network closet in the Chapel basement.
             The XT-DTS is a ruggedized distributed temperature sensor unit, and collects data from the boreholes by sending laser pulses down the fiber optic loops.
             It sends the data files it generates to a private PC via ethernet network, and these data files are uploaded to a Linux Virtual Machine that captures the relevant data and stores the database.
