--- a/geothermalsite/dashboard/templates/dashboard/footer.html
+++ b/geothermalsite/dashboard/templates/dashboard/footer.html
@@ -34,6 +34,9 @@
               <a href="https://www.carleton.edu/">Home</a>
             </li>
             <li>
+              <a href="https://www.carleton.edu/geology/">Geology</a>
+            </li>
+            <li>
               <a href="https://www.carleton.edu/geothermal/">Utility Master Plan</a>
             </li>
           </ul>
