committing rest of button color changes

--- a/geothermalsite/static/css/documentation.css
+++ b/geothermalsite/static/css/documentation.css
@@ -6,8 +6,8 @@
 }
 
 .list-group-item.active {
-    background-color: var(--custom-pink);
-    border-color: var(--custom-pink);
+    background-color: var(--custom-green);
+    border-color: var(--custom-green);
 }
 
 .card-header {
@@ -37,7 +37,7 @@
 }
 
 thead {
-    background-color: var(--custom-pink);
+    background-color: var(--custom-green);
 }
 
 .heading-text {
