Fixing doc table heading colors

--- a/geothermalsite/dashboard/templates/dashboard/documentation.html
+++ b/geothermalsite/dashboard/templates/dashboard/documentation.html
@@ -191,7 +191,7 @@
           <br/>
           <table class="table table-sm">
               <thead>
-                <tr>
+                <tr id="table-header">
                     <th class="heading-text" scope ="col">Outage ID</th>
                     <th class="heading-text" scope ="col">Channel ID</th>
                     <th class="heading-text" scope ="col">Outage Type</th>
