Fixed borehole map pop up

--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -136,8 +136,8 @@
                 </div>
             </div>
         </div>
-<!--
-        This was removed because it duplicates the temperature profile functionality.
+
+        <!-- This was removed because it duplicates the temperature profile functionality. -->
 
         <div class="form-container tab-pane fade" id="tempvsdepth">
             {# Header and information about the query #}
@@ -178,7 +178,7 @@
                     </form>
                 </div>
             </div>
-        </div> -->
+        </div> 
         {# end tab content #}
     </div>
 </div>
