--- a/geothermalsite/dashboard/templates/dashboard/base.html
+++ b/geothermalsite/dashboard/templates/dashboard/base.html
@@ -82,6 +82,12 @@
         </div>
     </div>
 
+    <!-- Light/dark mode switch -->
+    <script src="{% static 'js/utils/modeSwitch.js' %}"></script>
+    <!-- Onload functions -->
+    <script src="{% static 'js/utils/onload.js' %}"></script>
+    <!-- Form and mode caching -->
+    <script src="{% static 'js/utils/cache.js' %}"></script>
 
     <!-- Block to contain the header of each page, with no header by default. -->
     <h1 class="header" id="page-header">
