--- a/geothermalsite/dashboard/static/css/boreholemap.css
+++ b/geothermalsite/dashboard/static/css/boreholemap.css
@@ -3,8 +3,8 @@
 }
 
 .btn.info-btn {
-    background-color: var(--custom-black);
-    color: var(--custom-cream);
+    background-color: var(--primary-background-color);
+    color: var(--primary-text-color);
     padding:0px;
 }
 
