--- a/geothermalsite/dashboard/templates/dashboard/navbar.html
+++ b/geothermalsite/dashboard/templates/dashboard/navbar.html
@@ -24,7 +24,8 @@
 
       <div class="ml-auto">
         <a href="https://www.carleton.edu/" target="_blank">
-          <img id="logo" class="logo" src="{% static 'img/logos/carleton_white_logo.png' %}" alt="Carleton College Blue Logo" width="45" height="45">
+          <img id="logo-white" class="logo" src="{% static 'img/logos/carleton_white_logo.png' %}" alt="Carleton College Blue Logo" width="45" height="45">
+          <img id="logo-blue" class="logo" src="{% static 'img/logos/carleton_blue_logo.png' %}" alt="Carleton College Blue Logo" width="45" height="45" style="display:none;">
         </a>
       </div>
 
