--- a/geothermalsite/dashboard/templates/dashboard/base.html
+++ b/geothermalsite/dashboard/templates/dashboard/base.html
@@ -76,7 +76,7 @@
 
     <input type="checkbox" id="switch" />
 
-    <div class="switch-btn">
+    <div class="switch-btn" id="switch-button">
       <label id="mode-label" for="switch">
         <div class="icons">
           <span class="material-symbols-rounded"> light_mode </span>
