--- a/geothermalsite/dashboard/templates/dashboard/backToTopButton.html
+++ b/geothermalsite/dashboard/templates/dashboard/backToTopButton.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/backToTopButton.css' %}">
+<link rel="stylesheet" href="{% static 'css/components/backToTopButton.css' %}">
 <script src="{% static 'js/utils/backToTopButton.js' %}"></script>
 
 <!-- Back to top button -->
