--- a/geothermalsite/dashboard/templates/dashboard/base.html
+++ b/geothermalsite/dashboard/templates/dashboard/base.html
@@ -34,7 +34,7 @@
 
 
     <!-- Custom site styles -->
-    <link rel="stylesheet" href="{% static 'css/generalSiteStyles.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/general/generalSiteStyles.css' %}" />
     {% endblock %}
 
     <!-- Block to contain all JS files, which can be overwritten/extended in child templates -->
