--- a/geothermalsite/dashboard/templates/dashboard/boreholemap.html
+++ b/geothermalsite/dashboard/templates/dashboard/boreholemap.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/boreholemap.css' %}">
+<link rel="stylesheet" href="{% static 'css/components/boreholemap.css' %}">
 <div class="borehole-container inactive">
     <input type="button" class="btn info-btn" value="ⓘ Borehole:">
 
