--- a/geothermalsite/dashboard/templates/dashboard/customquery.html
+++ b/geothermalsite/dashboard/templates/dashboard/customquery.html
@@ -6,7 +6,7 @@ Advanced API: Custom Query
 
 {% block content %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/customquery.css' %}">
+<link rel="stylesheet" href="{% static 'css/pages/customquery.css' %}">
 {% comment %} moment.js for loading datetime object correctly in the data summary table {% endcomment %}
 <script src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
 
