--- a/geothermalsite/dashboard/templates/dashboard/documentation.html
+++ b/geothermalsite/dashboard/templates/dashboard/documentation.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/documentation.css' %}">
+<link rel="stylesheet" href="{% static 'css/pages/documentation.css' %}">
 
 
 <script>
