--- a/geothermalsite/dashboard/templates/dashboard/footer.html
+++ b/geothermalsite/dashboard/templates/dashboard/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/footer.css' %}">
+<link rel="stylesheet" href="{% static 'css/components/footer.css' %}">
 
 <footer class="bg-info text-center text-lg-start" id="main-footer">
     <hr id="footer-line">
