--- a/geothermalsite/dashboard/templates/dashboard/navbar.html
+++ b/geothermalsite/dashboard/templates/dashboard/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+<link rel="stylesheet" href="{% static 'css/components/navbar.css' %}">
 
 <!-- Bootstrap 4 Navbar: https://getbootstrap.com/docs/4.0/components/navbar/ -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary" id="main-navbar">
