--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -5,8 +5,9 @@
     {% include 'dashboard/jumbotron.html' %}
 
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/index.css' %}">
-
+    <link rel="stylesheet" href="{% static 'css/pages/index.css' %}">
+    <link rel="stylesheet" href="{% static 'css/components/customdaterangepicker.css' %}">
+    <script src="{% static 'js/utils/dateRangePicker.js' %}"></script>
 
     <script>
         var outageList = {{ outageList | safe }}
@@ -183,8 +184,6 @@
     </div>
 </div>
 
-    <link rel="stylesheet" href="{% static 'css/customdaterangepicker.css' %}">
-    <script src="{% static 'js/utils/dateRangePicker.js' %}"></script>
 
 
     {% if type and graphData %}
