--- a/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
@@ -6,7 +6,7 @@
     <div class="viewer">
         <div style="margin-bottom: 1ch;">
             <!-- Buttons for downloading the data as a CSV and the graph as an image -->
-            <script src="{% static 'js/utils/createCsv.js' %}"></script>
+            <script src="{% static 'js/utils/downloadCsv.js' %}"></script>
             <button class="btn btn-secondary submit-button" onclick="downloadData('temp_vs_depth')">Download data</button>
             <button class="btn btn-secondary submit-button" id="downloadImage" onclick="window.downloadGraphImage('temp_vs_depth')">Download graph</button>
         </div>
