--- a/geothermalsite/dashboard/templates/dashboard/tempvstime.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvstime.html
@@ -6,7 +6,7 @@
     <div class="viewer">
          <!-- Buttons for downloading the data as a CSV and the graph as an image -->
         <div class="download-btn" style="margin-bottom: 1ch;">
-            <script src="{% static 'js/utils/createCsv.js' %}"></script>
+            <script src="{% static 'js/utils/downloadCsv.js' %}"></script>
             <button class="btn btn-secondary submit-button" onclick="downloadData('temp_vs_time')">Download data</button>
             <button class="btn btn-secondary submit-button"id="downloadImage" onclick="window.downloadGraphImage('temp_vs_time')">Download graph</button>
         </div>
