--- a/geothermalsite/dashboard/templates/dashboard/shared/base.html
+++ b/geothermalsite/dashboard/templates/dashboard/shared/base.html
@@ -69,7 +69,7 @@
 </head>
 
 <body>
-    {% include 'dashboard/navbar.html' %}
+    {% include 'dashboard/shared/navbar.html' %}
 
     <!-- Block to contain the header of each page, with no header by default. -->
     <h1 class="header" id="page-header">
@@ -83,9 +83,9 @@
         {% endblock %}
     </div>
 
-    {% include 'dashboard/backToTopButton.html' %}
+    {% include 'dashboard/components/backToTopButton.html' %}
 
-    {% include 'dashboard/footer.html' %}
+    {% include 'dashboard/shared/footer.html' %}
 </body>
 
 </html>
