Reorganized img, updated references

--- a/geothermalsite/dashboard/templates/dashboard/pages/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/pages/about.html
@@ -170,7 +170,7 @@
             See the image below for a summary of the data pipeline.
         </p>
         <div class="container" id="data-pipeline">
-          <img src="{% static 'img/datapipeline.png' %}" alt="Data pipeline">
+          <img src="{% static 'img/info/datapipeline.png' %}" alt="Data pipeline">
         </div>
         <p>
           For more information about the data pipeline or database, please <a class="link" href="mailto:bduffy@carleton.edu"><u>contact Bruce Duffy</u></a>.
