--- a/geothermalsite/dashboard/templates/dashboard/pages/customquery.html
+++ b/geothermalsite/dashboard/templates/dashboard/pages/customquery.html
@@ -20,7 +20,7 @@ Advanced API: Custom Query
 
         <details>
             <summary>Here is the schema diagram for the database</summary>
-            <img src="{% static 'img/schema.png' %}" alt="Schema diagram for the Geothermal database" style="width:100%">
+            <img src="{% static 'img/info/schema.png' %}" alt="Schema diagram for the Geothermal database" style="width:100%">
         </details>
         <br>
         <label for="query">Enter a Custom Query:</label>
