--- a/geothermalsite/dashboard/templates/dashboard/components/boreholemap.html
+++ b/geothermalsite/dashboard/templates/dashboard/components/boreholemap.html
@@ -5,7 +5,7 @@
 
     <div class="borehole-map-content">
         <h3>Borehole Map</h3>
-        <img src="{% static 'img/boreholes.png' %}" alt="Map of baldspot boreholes" width="85%" >
+        <img src="{% static 'img/info/boreholes.png' %}" alt="Map of baldspot boreholes" width="85%" >
         <p>Each B1, B2, ... , B5 represents a single borehole sample in the baldspot. </p>
     </div>
 
