Reorganized js files, updated references

--- a/geothermalsite/dashboard/templates/dashboard/components/backToTopButton.html
+++ b/geothermalsite/dashboard/templates/dashboard/components/backToTopButton.html
@@ -1,6 +1,6 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/components/backToTopButton.css' %}">
-<script src="{% static 'js/utils/backToTopButton.js' %}"></script>
+<script src="{% static 'js/ui/backToTopButton.js' %}"></script>
 
 <!-- Back to top button -->
 <button type="button" class="d-flex justify-content-center align-items-center btn green-background btn-floating btn-lg" id="btn-back-to-top">
