--- a/geothermalsite/dashboard/templates/dashboard/pages/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/pages/index.html
@@ -35,7 +35,7 @@
             <a class="nav-link" data-toggle="tab" href="#" id="tempvsdepth-button" onclick="selectTab('tempvsdepth')">Temperature vs. Depth</a>
         </li> -->
     </ul>
-    <script src="{% static 'js/utils/selectTab.js' %}"></script>
+    <script src="{% static 'js/ui/selectTab.js' %}"></script>
     <script src="{% static 'js/utils/cache.js' %}"></script>
 
     {# Content inside the given tab #}
@@ -184,7 +184,7 @@
 </div>
 
 <link rel="stylesheet" href="{% static 'css/components/customdaterangepicker.css' %}">
-<script src="{% static 'js/utils/dateRangePicker.js' %}"></script>
+<script src="{% static 'js/ui/dateRangePicker.js' %}"></script>
 
 
     {% if type and graphData %}
