--- a/geothermalsite/dashboard/templates/dashboard/backToTopButton.html
+++ b/geothermalsite/dashboard/templates/dashboard/backToTopButton.html
@@ -1,8 +1,12 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/backToTopButton.css' %}">
-<script src="{% static 'js/utils/backToTopButton.js' %}"></script>
 
+<link rel="stylesheet"
+      href="{% static 'css/backToTopButton.css' %}"/>
+<script src="{% static 'js/utils/backToTopButton.js' %}"></script>
 <!-- Back to top button -->
-<button type="button" class="d-flex justify-content-center align-items-center btn green-background btn-floating btn-lg" id="btn-back-to-top">
-    <i class="fas fa-arrow-up" style="color:white;"></i>
+<button type="button"
+        class="d-flex justify-content-center align-items-center btn green-background btn-floating btn-lg"
+        id="btn-back-to-top">
+  <i class="fas fa-arrow-up"
+     style="color:white"></i>
 </button>
