--- a/geothermalsite/dashboard/templates/dashboard/tempprofile.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempprofile.html
@@ -1,30 +1,37 @@
 {% load static %}
 
-<link rel="stylesheet" href="{% static 'css/generalSiteStyles.css' %}">
-<link rel="stylesheet" href="{% static 'css/tempprofile.css' %}">
-
+<link rel="stylesheet"
+      href="{% static 'css/generalSiteStyles.css' %}"/>
+<link rel="stylesheet"
+      href="{% static 'css/tempprofile.css' %}"/>
 <!-- Graph code and canvas for housing the graph -->
-<script src="{% static 'js/graphs/stratigraphyGraph.js' %}" type="module"></script>
+<script src="{% static 'js/graphs/stratigraphyGraph.js' %}"
+        type="module"></script>
 <div class="container">
-    <div class="viewer" >
+  <div class="viewer">
     <!-- Buttons for downloading the data as a CSV and the graph as an image -->
-    <div style="margin-bottom: 1ch;">
-
-        <script src="{% static 'js/utils/createCsv.js' %}"></script>
-        <button class="btn btn-secondary submit-button" onclick="downloadData('temperature_profile')">Download data</button>
-        <button class="btn btn-secondary submit-button" id="downloadImage" onclick="window.downloadGraphImage('temperature_profile')">Download graph</button>
-        {% comment %}
+    <div style="margin-bottom: 1ch">
+      <script src="{% static 'js/utils/createCsv.js' %}"></script>
+      <button class="btn btn-secondary submit-button"
+              onclick="downloadData('temperature_profile')">Download data</button>
+      <button class="btn btn-secondary submit-button"
+              id="downloadImage"
+              onclick="window.downloadGraphImage('temperature_profile')">
+        Download graph
+      </button>
+      {% comment %}
         <button class="btn submit-button" id="see-stratigraphy" onclick="$('.stratigraphy-container').toggle()" style="background-color: var(--custom-black); color: var(--custom-cream);padding:0px">ⓘ see stratigraphy</button>
         <div class="stratigraphy-container" style="display:none; text-align: center; margin-left:30%;margin-right:50%;">
             <h5>Stratigraphy</h5>
-            <img src="{% static 'img/stratigraphy_placeholder.png' %}" alt="Map of baldspot boreholes" width="95%" >
-            <p>This is the stratigraphy from borehole ... </p>
+            <img src="{% static 'img/stratigraphy_placeholder.png' %}" alt="Map of baldspot boreholes" width="95%">
+            <p>This is the stratigraphy from borehole ...</p>
         </div>
-        {% endcomment %}
+      {% endcomment %}
     </div>
-
     {# the height attribute of the canvas defines how tall the graph displays on the page #}
     <canvas id="ctx"></canvas>
-    <button class="btn btn-outline-secondary" id="reset" onclick="window.chart.resetZoom();">Reset Zoom</button>
-    </div>
+    <button class="btn btn-outline-secondary"
+            id="reset"
+            onclick="window.chart.resetZoom();">Reset Zoom</button>
+  </div>
 </div>
