Comments and documentation

--- a/geothermalsite/dashboard/templates/dashboard/tempprofile.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempprofile.html
@@ -13,7 +13,8 @@
         <script src="{% static 'js/utils/createCsv.js' %}"></script>
         <button class="btn btn-secondary submit-button" onclick="downloadData('temperature_profile')">Download data</button>
         <button class="btn btn-secondary submit-button" id="downloadImage" onclick="window.downloadGraphImage('temperature_profile')">Download graph</button>
-        {% comment %}
+        {% comment %} 
+        {# the code in this comment can be used to display a pop-up image of stratigraphy, we didn't have a great image to use, so it is not currently live. #}
         <button class="btn submit-button" id="see-stratigraphy" onclick="$('.stratigraphy-container').toggle()" style="background-color: var(--custom-black); color: var(--custom-cream);padding:0px">ⓘ see stratigraphy</button>
         <div class="stratigraphy-container" style="display:none; text-align: center; margin-left:30%;margin-right:50%;">
             <h5>Stratigraphy</h5>
