--- a/geothermalsite/dashboard/templates/dashboard/boreholemap.html
+++ b/geothermalsite/dashboard/templates/dashboard/boreholemap.html
@@ -1,4 +1,5 @@
 {% load static %}
+<!-- This file contains code for the borehole map popup -->
 <link rel="stylesheet" href="{% static 'css/boreholemap.css' %}">
 <div class="borehole-container inactive">
     <input type="button" class="btn info-btn" value="ⓘ Borehole:">
