--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -137,7 +137,8 @@
             </div>
         </div>
 
-        <!-- This was removed because it duplicates the temperature profile functionality. -->
+        <!-- The following code is unnecessary because it duplicates the temperature profile functionality.
+            However, as-is, commenting it out breaks the borehole map pop-up. -->
 
         <div class="form-container tab-pane fade" id="tempvsdepth">
             {# Header and information about the query #}
@@ -179,6 +180,7 @@
                 </div>
             </div>
         </div>
+        <!-- end of unneccesary code chunk -->
         {# end tab content #}
     </div>
 </div>
